--- a/.github/workflows/build_pages.yml
+++ b/.github/workflows/build_pages.yml
@@ -7,6 +7,11 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  
+  # Runs daily at 9:00am and 1:00pm
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '0 9,13 * * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
